# uptime-monitor

./: README.md  cspell.json  scripts.sh  update_env.py
.zed/: tasks.json
Cassandra/: Dockerfile  entrypoint.sh  test.sh
ScyllaDB/: Dockerfile  entrypoint.sh
backend/: .env.pub  Cargo.toml  Dockerfile  OpenAPI.json  build.rs  docker-compose.yml
backend/.sqlx/: query-ca6b4f246a0cbb0af5eae7293c387fc3d9465735d7b96ddbac9facf3d976a588.json
backend/migrations/: 20251106152600_structure.cql
backend/src/: dabatase.rs  eager_env.rs  gen_openapi.rs  main.rs  regions.rs  server.rs  utils.rs
backend/src/collab/: assignment.rs  heartbeat.rs  mod.rs  network.rs  range_manager.rs  ring_assignment.rs
backend/src/collab/internode/: messages.rs  mod.rs
backend/src/database/: mod.rs  preparer.rs  testing.rs
backend/src/mutations/: authorization.rs  mod.rs
backend/src/mutations/checks/: mod.rs
backend/src/mutations/sessions/: fixtures.cql  mod.rs
backend/src/mutations/users/: mod.rs  password.rs
backend/src/queries/: mod.rs
backend/src/queries/check_results/: calculator.rs  fixtures.cql  mod.rs  queries.rs
backend/src/queries/checks/: mod.rs
backend/src/queries/users/: fixtures.cql  mod.rs
backend/src/server/: auth.rs  health.rs  internal.rs  mod.rs  openapi.rs
backend/src/server/checks/: check_endpoints_tests.rs  fixtures.cql  metrics.rs  mod.rs
backend/src/server/users/: fixtures.cql  mod.rs  user_endpoints_tests.rs
backend/src/worker/: check.rs  fetch.rs  fixtures.cql  mod.rs
backend/src/worker/check/: execute.rs  mod.rs  save.rs
database/: Dockerfile  cassandra-rackdc.properties  docker-compose.yml  scylla.yaml  scylla.yaml.tpl  wrapper.sh
frontend/: .env.pub  .gitignore  .prettierrc.json  Dockerfile  docker-compose.yml  eslint.config.js  package-lock.json  package.json
frontend/src/: app.css  app.d.ts  hooks.server.ts
frontend/src/lib/: constants.ts  types.ts  (+1 more)
infra/: Caddyfile
terraform/: .gitignore  .terraform.lock.hcl  backend.tf  caddy.tf  database.tf  dns.tf  frontend.tf  main.tf  monitoring.tf  network.tf  outputs.tf  variables.tf
(+36 files in other folders)
