[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
actix-web = "4"
actix-cors = "0.7.1"
reqwest = "0.12.24"
env_logger = "0.11.8"
anyhow = "1.0.100"
scylla = "1.4.1"
futures = "0.3.31"
rand = "0.9.2"
include_dir = "0.7.4"

[build-dependencies]
dotenvy = "0.15.7"
