[package]
name = "backend"
version = "0.1.0"
edition = "2024"


[dependencies]
tokio = { version = "1", features = ["full"] }
actix-web = "4"
actix-cors = "0.7.1"
reqwest = { version = "0.12.24", features = ["cookies", "json"] }
env_logger = "0.11.8"
anyhow = "1.0.100"
scylla = { version = "1.4.1", features = ["chrono-04"] }
futures = "0.3.31"
rand = "0.9.2"
include_dir = "0.7.4"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
argon2 = { version = "0.5.3", features = ["std"] }
chrono = { version = "0.4.42", features = ["serde"] }
utoipa = { version = "5.4.0", features = ["actix_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9", features = [
  "vendored",
  "actix-web",
  "debug-embed",
] }
utoipa-actix-web = "0.1.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
cookie = "0.18"
get_if_addrs = "0.5.3"
rand_distr = "0.5.1"
log = "0.4.28"
strum = { version = "0.27.2", features = ["derive"] }
tokio-stream = "0.1.17"
serde_plain = "1.0.2"
itertools = "0.14.0"

[dev-dependencies]
httpmock = "0.8.2"

[build-dependencies]
dotenvy = "0.15.7"
